.metadata/.plugins/org.eclipse.cdt.ui/AltimeX Final.build.log
13:11:30 **** Incremental Build of configuration Debug for project AltimeX Final ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Inc/LPS22HB.h:10,
                 from ../Core/Src/main.c:27:
../Core/Inc/altimex_serial.h:13:6: warning: conflicting types for built-in function 'printf'; expected 'int(const char *, ...)' [-Wbuiltin-declaration-mismatch]
   13 | void printf(float data, UART_HandleTypeDef* uart);
      |      ^~~~~~
../Core/Inc/altimex_serial.h:1:1: note: 'printf' is declared in header '<stdio.h>'
  +++ |+#include <stdio.h>
    1 | /*
In file included from ../Core/Src/main.c:27:
../Core/Inc/LPS22HB.h:57:1: error: unknown type name 'class'
   57 | class LPS22HB {
      | ^~~~~
../Core/Inc/LPS22HB.h:57:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   57 | class LPS22HB {
      |               ^
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:120:23: warning: variable 'config' set but not used [-Wunused-but-set-variable]
  120 |  struct AltimexConfig config;
      |                       ^~~~~~
../Core/Src/main.c:117:9: warning: unused variable 'alt' [-Wunused-variable]
  117 |  double alt = 0.0;
      |         ^~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

13:11:30 Build Failed. 3 errors, 3 warnings. (took 230ms)

